--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           </select>
         </div>
         <div id="tsResult"></div>
-        <button class="tsButton" onclick="xetTuyenSinh()">Xét Duyệt</button>
+        <button class="tsButton btn btn-success" onclick="xetTuyenSinh()">Xét Duyệt</button>
       </section>
     
 
@@ -126,7 +126,7 @@
           <input id="kenhcaocap-input" class="form-control" type="text" name="" placeholder="0" />
         </div>
         <div id="b4Result"></div>
-        <button class="b4Button" onclick="tienCap() ">Tính tiền cáp</button>
+        <button class="b4Button btn btn-success" onclick="tienCap() ">Tính tiền cáp</button>
       </section>
 
 
